--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,10 @@
         <servlet-name>GroovyServlet</servlet-name>
         <url-pattern>/authtable</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GroovyServlet</servlet-name>
+        <url-pattern>/query</url-pattern>
+    </servlet-mapping>
     <!--
     <servlet-mapping>
         <servlet-name>AuthorizationServlet</servlet-name>
