First pass at dynamic editor servlet.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,6 +39,10 @@
         <servlet-name>GroovyServlet</servlet-name>
         <url-pattern>/query</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GroovyServlet</servlet-name>
+        <url-pattern>/editor</url-pattern>
+    </servlet-mapping>
     <!--
     <servlet-mapping>
         <servlet-name>AuthorizationServlet</servlet-name>
