Cleanup, only set secrets once.

--- a/build.gradle
+++ b/build.gradle
@@ -49,5 +49,5 @@ artifacts {
 
 war {
     from "src/main/webapp"
-    filter(ReplaceTokens, tokens: ['apiKey': apiKey, 'administratorEmail': administratorEmail, 'authorizationTable': authorizationTable])
+    filter(ReplaceTokens, tokens: ['administratorEmail': administratorEmail, 'authorizationTable': authorizationTable])
 }
