--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,11 @@
       <servlet-class>edu.harvard.chs.authorizationservlet.AuthorizationServletCallback</servlet-class>
     </servlet>
 
+    <servlet>
+      <servlet-name>FusionTablesServlet</servlet-name>
+      <servlet-class>edu.harvard.chs.citecollectionmanager.FusionTablesServlet</servlet-class>
+    </servlet>
+
 
 
     <servlet-mapping>
@@ -42,6 +47,10 @@
     <servlet-mapping>
         <servlet-name>GroovyServlet</servlet-name>
         <url-pattern>/editor</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>FusionTablesServlet</servlet-name>
+        <url-pattern>/tables/*</url-pattern>
     </servlet-mapping>
     <!--
     <servlet-mapping>
