Validate SQL before proxying

--- a/build.gradle
+++ b/build.gradle
@@ -58,5 +58,5 @@ artifacts {
 
 war {
     from "src/main/webapp"
-    filter(ReplaceTokens, tokens: ['administratorEmail': administratorEmail, 'authorizationTable': authorizationTable, 'capabilitiesUrl': capabilitiesUrl])
+    filter(ReplaceTokens, tokens: ['administratorEmail': administratorEmail, 'authorizationTable': authorizationTable, 'capabilitiesUrl': capabilitiesUrl, 'validTables': validTables])
 }
