--- a/src/main/resources/edu/harvard/chs/citecollectionmanager/build.properties
+++ b/src/main/resources/edu/harvard/chs/citecollectionmanager/build.properties
@@ -1,3 +1,4 @@
 administratorEmail=@administratorEmail@
 authorizationTable=@authorizationTable@
 capabilitiesUrl=@capabilitiesUrl@
+fileCredentialStore=@fileCredentialStore@
