--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 dependencies {
-    compile group: 'commons-io', name: 'commons-io', version: '1.4'
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
     compile group: 'log4j', name: 'log4j', version: '1.2.15', ext: 'jar'
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.7'
     compile group: 'com.google.apis', name: 'google-api-services-oauth2', version: 'v1-rev129-1.22.0'
