Add explodedWar task so that we don't have to copy a fragile and long path, or have to actually run/stop a Jetty server to get the exploded WAR

--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,10 @@ war {
     from "src/main/webapp"
     filter(ReplaceTokens, tokens: ['administratorEmail': administratorEmail, 'authorizationTable': authorizationTable, 'capabilitiesUrl': capabilitiesUrl, 'validTables': validTables])
 }
+
+task explodedWar(type: Copy) {
+    into "$buildDir/exploded"
+    with war
+}
+
+war.dependsOn explodedWar
