Mark servlets as <load-on-startup> so we can handle warmup requests (see https://cloud.google.com/appengine/docs/standard/java/warmup-requests/configuring)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,11 +9,13 @@
     <servlet>
       <servlet-name>GroovyServlet</servlet-name>
       <servlet-class>groovy.servlet.GroovyServlet</servlet-class>
+      <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet>
       <servlet-name>FusionTablesServlet</servlet-name>
       <servlet-class>edu.harvard.chs.citecollectionmanager.FusionTablesServlet</servlet-class>
+      <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet-mapping>
